fix: adjust create-replace to guidelines